[tool.poetry]
name = "python-redis-orm"
version = "0.5.2"
description = "Python Redis ORM library that gives redis easy-to-use objects with fields and speeds a development up, inspired by Django ORM"
authors = ["Anton Nechaev <antonnechaev990@gmail.com>"]
readme = "README.md"
repository = "https://github.com/gh0st-work/python_redis_orm"
homepage = "https://github.com/gh0st-work/python_redis_orm"
keywords = ["python", "redis", "ORM", "django", "database"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Topic :: Database :: Front-Ends",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6"
redis = "^3.5.3"
pytz = "^2021"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
